# subdivision-regression

./: LICENSE  README.md
python/: .gitignore  generate_example.py  generate_example_doosabin_regression_problem.py  visualise_doosabin_regression.py
src/: CMakeLists.txt  ceres_surface.cpp  ceres_surface.h  doosabin_regression.cpp  doosabin_regression.proto  patch_index_coder.cpp  patch_index_coder.h  patch_index_encoding.cpp  patch_index_encoding.h  surface.h
