CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(DOO-SABIN_REGRESSION)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

SET(RAPID_JSON_INCLUDE_DIR "" CACHE PATH "")
INCLUDE_DIRECTORIES(${RAPID_JSON_INCLUDE_DIR})

SET(COMMON_CPP_INCLUDE_DIR "" CACHE PATH "")
INCLUDE_DIRECTORIES(${COMMON_CPP_INCLUDE_DIR})

SET(DOOSABIN_INCLUDE_DIR "" CACHE PATH "")
INCLUDE_DIRECTORIES(${DOOSABIN_INCLUDE_DIR})

# Ceres
FIND_PACKAGE(Ceres REQUIRED)

SET(GFLAGS_INCLUDE_DIR "" CACHE PATH "")
SET(GFLAGS_LIBRARY "" CACHE FILEPATH "")

INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS}
                    ${GFLAGS_INCLUDE_DIR})

SET(DOOSABIN_REGRESSION_SRCS
    ceres_surface.cpp
    ceres_surface.h
    doosabin_regression.cpp
    patch_index_encoding.cpp
    patch_index_encoding.h
    surface.h)
ADD_EXECUTABLE(doosabin_regression ${DOOSABIN_REGRESSION_SRCS})
TARGET_LINK_LIBRARIES(doosabin_regression
                      ${CERES_LIBRARIES}
                      ${GFLAGS_LIBRARY})
